// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Radio Basic 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <div
    className="psds-radio-group"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      className="psds-radio-group__label psds-theme--dark"
    >
      The label
    </div>
    <div
      className="psds-radio-group__button-container"
    >
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Red
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Green
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Blue
        </div>
      </label>
    </div>
    <div
      className="psds-radio-group__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Controlled 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <div
    style={
      Object {
        "color": "rgba(255, 255, 255, 0.95)",
      }
    }
  >
    Selected: 
    green
    <br />
    <button
      onClick={[Function]}
    >
      set to blue
    </button>
  </div>
  <br />
  <div
    className="psds-radio-group"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      className="psds-radio-group__label psds-theme--dark"
    >
      The label
    </div>
    <div
      className="psds-radio-group__button-container"
    >
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Red
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark psds-radio-button__circle--checked"
            >
              <div
                className="psds-radio-button__circle-inner"
              />
            </div>
          </div>
        </div>
        <input
          checked={true}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Green
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Blue
        </div>
      </label>
    </div>
    <div
      className="psds-radio-group__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Disabled 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <div>
    <div
      className="psds-radio-group psds-radio-group--disabled"
      role="radiogroup"
    >
      <div
        className="psds-radio-group__label psds-theme--dark"
      >
        Group disabled
      </div>
      <div
        className="psds-radio-group__button-container"
      >
        <label
          className="psds-radio-button psds-radio-button--disabled"
        >
          <div
            className="psds-radio-button__circle-outer"
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-radio-button__halo"
            >
              <div
                className="psds-radio-button__circle psds-theme--dark"
              />
            </div>
          </div>
          <input
            checked={false}
            className="psds-radio-button__input"
            name="someName"
            onBlur={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="radio"
            value="red"
          />
          <div
            className="psds-radio-button__label psds-theme--dark"
          >
            Red
          </div>
        </label>
        <label
          className="psds-radio-button psds-radio-button--disabled"
        >
          <div
            className="psds-radio-button__circle-outer"
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-radio-button__halo"
            >
              <div
                className="psds-radio-button__circle psds-theme--dark"
              />
            </div>
          </div>
          <input
            checked={false}
            className="psds-radio-button__input"
            name="someName"
            onBlur={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="radio"
            value="green"
          />
          <div
            className="psds-radio-button__label psds-theme--dark"
          >
            Green
          </div>
        </label>
        <label
          className="psds-radio-button psds-radio-button--disabled"
        >
          <div
            className="psds-radio-button__circle-outer"
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-radio-button__halo"
            >
              <div
                className="psds-radio-button__circle psds-theme--dark"
              />
            </div>
          </div>
          <input
            checked={false}
            className="psds-radio-button__input"
            name="someName"
            onBlur={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="radio"
            value="blue"
          />
          <div
            className="psds-radio-button__label psds-theme--dark"
          >
            Blue
          </div>
        </label>
      </div>
    </div>
    <div
      className="psds-radio-group"
      role="radiogroup"
    >
      <div
        className="psds-radio-group__label psds-theme--dark"
      >
        Individual button disabled
      </div>
      <div
        className="psds-radio-group__button-container"
      >
        <label
          className="psds-radio-button"
        >
          <div
            className="psds-radio-button__circle-outer"
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
            >
              <div
                className="psds-radio-button__circle psds-theme--dark"
              />
            </div>
          </div>
          <input
            checked={false}
            className="psds-radio-button__input"
            name="anotherName"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="radio"
            value="red"
          />
          <div
            className="psds-radio-button__label psds-theme--dark"
          >
            Red
          </div>
        </label>
        <label
          className="psds-radio-button psds-radio-button--disabled"
        >
          <div
            className="psds-radio-button__circle-outer"
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-radio-button__halo"
            >
              <div
                className="psds-radio-button__circle psds-theme--dark"
              />
            </div>
          </div>
          <input
            checked={false}
            className="psds-radio-button__input"
            name="anotherName"
            onBlur={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="radio"
            value="green"
          />
          <div
            className="psds-radio-button__label psds-theme--dark"
          >
            Green
          </div>
        </label>
        <label
          className="psds-radio-button"
        >
          <div
            className="psds-radio-button__circle-outer"
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
            >
              <div
                className="psds-radio-button__circle psds-theme--dark"
              />
            </div>
          </div>
          <input
            checked={false}
            className="psds-radio-button__input"
            name="anotherName"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            readOnly={true}
            type="radio"
            value="blue"
          />
          <div
            className="psds-radio-button__label psds-theme--dark"
          >
            Blue
          </div>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Error 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <div
    className="psds-radio-group"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      className="psds-radio-group__label psds-theme--dark"
    >
      The label
    </div>
    <div
      className="psds-radio-group__button-container"
    >
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--error psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Red
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--error psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Green
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--error psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Blue
        </div>
      </label>
    </div>
    <div
      className="psds-radio-group__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Label Only 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <div
    className="psds-radio-group"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      className="psds-radio-group__label psds-theme--dark"
    >
      The label
    </div>
    <div
      className="psds-radio-group__button-container"
    >
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Red
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Green
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Blue
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Multiple Stacked 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <div
    className="psds-radio-group"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      className="psds-radio-group__button-container"
    >
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Red
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Green
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Blue
        </div>
      </label>
    </div>
  </div>
  <div
    className="psds-radio-group"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      className="psds-radio-group__button-container"
    >
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Red
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Green
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Blue
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio No Labels 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <div
    aria-label="You need an a11y label"
    className="psds-radio-group"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      className="psds-radio-group__button-container"
    >
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Red
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Green
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Blue
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Pre Selected 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <div
    className="psds-radio-group"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      className="psds-radio-group__label psds-theme--dark"
    >
      The label
    </div>
    <div
      className="psds-radio-group__button-container"
    >
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark psds-radio-button__circle--checked"
            >
              <div
                className="psds-radio-button__circle-inner"
              />
            </div>
          </div>
        </div>
        <input
          checked={true}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Red
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Green
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Blue
        </div>
      </label>
    </div>
    <div
      className="psds-radio-group__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Radio Sub Label Only 1`] = `
<div
  style={
    Object {
      "height": "100vh",
      "padding": "24px",
    }
  }
>
  <div
    aria-label="You need an a11y label"
    className="psds-radio-group"
    onBlur={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    role="radiogroup"
  >
    <div
      className="psds-radio-group__button-container"
    >
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="red"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Red
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="green"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Green
        </div>
      </label>
      <label
        className="psds-radio-button"
      >
        <div
          className="psds-radio-button__circle-outer"
        >
          <div
            className="psds-halo psds-theme--dark psds-halo--shape-pill psds-halo--gap-size-default psds-halo--inline psds-halo--visible-on-focus psds-radio-button__halo"
          >
            <div
              className="psds-radio-button__circle psds-theme--dark"
            />
          </div>
        </div>
        <input
          checked={false}
          className="psds-radio-button__input"
          name="radio-name"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="radio"
          value="blue"
        />
        <div
          className="psds-radio-button__label psds-theme--dark"
        >
          Blue
        </div>
      </label>
    </div>
    <div
      className="psds-radio-group__sub-label psds-theme--dark"
    >
      The sub label
    </div>
  </div>
</div>
`;
